--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Aula de CSS</title>
+    <title>Aula de JavaScript</title>
    <link rel="stylesheet" type="text/css" href="estilo.css">
-
+   <script type="text/javascript" src="funcoes.js">
+   </script>
 </head>
-    <h2> Aula de CSS</h2>
-    <p>Formatando paragrafo</p>
-    <del>Raphael</del>
-    </br>Linha 3
-</body>
+    <h2> Aula de CSS_JavaScript</h2>
+    <body> 
+    </br>Raphael Cardoso Moreira - RA: 1901927
+
+   
+
+    
+    </body>
 </html>
