--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <script type="text/javascript" src="funcoes.js">
    </script>
 </head>
-    <h2> Aula de CSS_JavaScript</h2>
+    <h2> Aula de JavaScript</h2>
     <body> 
     </br>Raphael Cardoso Moreira - RA: 1901927
 
